Add docker volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,5 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./log:/app/log
+      - ./config:/app/config
+      - ./main.rb:/app/main.rb
