--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -1,5 +1,5 @@
-AtiS:
-  consumer_key: 
-  consumer_secret: 
-  access_token: 
-  access_token_secret: 
+your_screen_name:
+  consumer_key:
+  consumer_secret:
+  access_token:
+  access_token_secret:
